--- a/index.html
+++ b/index.html
@@ -1,7 +1,154 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+	<head>
+		<title>Amit Maharana · Portfolio</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
+
+		<!-- Header -->
+			<header id="header">
+				<h1>Amit Maharana · Portfolio</h1>
+				<nav>
+					<ul>
+						<li><a href="#intro">Home</a></li>
+						<li><a href="#who">Who I Am</a></li>
+						<li><a href="#what">What I Do</a></li>
+						<!-- <li><a href="#work">My Work</a></li> -->
+						<li><a href="#contact">Contact</a></li>
+					</ul>
+				</nav>
+			</header>
+
+		<!-- Intro -->
+			<section id="intro" class="main style1 dark fullscreen">
+				<div class="content">
+					<header>
+						<h2>Hello.</h2>
+						<h3 style="font-size: 32px;">I am Amit Maharana, A full-stack developer.</h3>
+					</header>
+					<p></p>
+					<footer>
+						<a href="#who" class="button style2 down">More</a>
+					</footer>
+				</div>
+			</section>
+
+		<!-- One -->
+			<section id="who" class="main style2 right dark fullscreen">
+				<div class="content box style2">
+					<header>
+						<h2>Who I Am</h2>
+					</header>
+					<p>I'm a passionate developer but more importantly I'm passionate about technology. 
+						I have about 3 years of professional application development experience. 
+						During which, I have programmed in many languages like Java, Python, TypeScript 
+						and worked on a wide range of projects with various agile teams.
+						My stint at the Bank of New York Mellon helped me gain valuable experience in system design and full stack development. 
+						</p>
+				</div>
+				<a href="#what" class="button style2 down anchored">Next</a>
+			</section>
+
+		<!-- Two -->
+			<section id="what" class="main style2 left dark fullscreen">
+				<div class="content box style2">
+					<header>
+						<h2>What I Do</h2>
+					</header>
+					<p>I am currently pursuing Masters in Computer Software Engineering at Arizona State University. 
+						Since joining ASU, I have enhanced my programming skills by taking up the course on Algorithms and also by 
+						building some amazing projects as a part of the course on Semantic Web Engineering and Foundations of Software Engineering. 
+						I have also worked on diversifying my knowledge and skill set by taking up the course on Mobile Systems
+						and loved every bit of developing mobile apps using iOS and Android platforms.</p>
+				</div>
+				<!-- <a href="#work" class="button style2 down anchored">Next</a> -->
+			</section>
+
+		<!-- Work -->
+			<!-- <section id="work" class="main style3 primary">
+				<div class="content">
+					<header>
+						<h2>My Work</h2>
+						<p></p>
+					</header> -->
+
+					<!-- Gallery  -->
+						<!-- <div class="gallery">
+							<article class="from-left">
+								<a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" title="" alt="" /></a>
+							</article>
+							<article class="from-right">
+								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="" alt="" /></a>
+							</article>
+							<article class="from-left">
+								<a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" title="" alt="" /></a>
+							</article>
+							<article class="from-right">
+								<a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" title="" alt="" /></a>
+							</article>
+							<article class="from-left">
+								<a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" title="" alt="" /></a>
+							</article>
+							<article class="from-right">
+								<a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" title="" alt="" /></a>
+							</article>
+						</div> -->
+
+				</div>
+			</section>
+
+		<!-- Contact -->
+			<section id="contact" class="main style3 secondary">
+				<div class="content">
+					<header>
+						<h2>Say Hello</h2>
+						<p>Feel free to contact me via email or reach out to me on social media.</p>
+					</header>
+					<div class="box">
+						<form method="post" action="https://formspree.io/mnqvekvo">
+							<div class="fields">
+								<div class="field half"><input type="text" name="name" placeholder="Name" /></div>
+								<div class="field half"><input type="email" name="_replyto" placeholder="Email" /></div>
+								<div class="field"><textarea name="message" placeholder="Message" rows="4"></textarea></div>
+							</div>
+							<ul class="actions special">
+								<li><input type="submit" value="Send Message" /></li>
+							</ul>
+						</form>
+					</div>
+				</div>
+			</section>
+
+		<!-- Footer -->
+			<footer id="footer">
+
+				<!-- Icons -->
+					<ul class="icons">
+						<li><a href="mailto: amahara1@asu.edu" class="fas fa-envelope"><span class="label"></span></a></li>
+						<li><a href="https://www.github.com/amitmaharana" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="https://www.linkedin.com/in/amitmaharana" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+					</ul>
+
+				<!-- Menu -->
+					<ul class="menu">
+						<li>&copy; Amit Maharana</li><li>HTML5 UP</li>
+					</ul>
+
+			</footer>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.poptrox.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
