--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						I have also worked on diversifying my knowledge and skill set by taking up the course on Mobile Systems
 						and loved every bit of developing mobile apps using iOS and Android platforms.</p>
 				</div>
-				<!-- <a href="#work" class="button style2 down anchored">Next</a> -->
+				<a href="#contact" class="button style2 down anchored">Next</a>
 			</section>
 
 		<!-- Work -->
