--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
 					<div class="box">
 						<form method="post" action="https://formspree.io/mnqvekvo">
 							<div class="fields">
-								<div class="field half"><input type="text" name="name" placeholder="Name" /></div>
-								<div class="field half"><input type="email" name="_replyto" placeholder="Email" /></div>
+								<div class="field half"><input type="text" name="name" placeholder="Your Name" /></div>
+								<div class="field half"><input type="email" name="_replyto" placeholder="Your Email" /></div>
 								<div class="field"><textarea name="message" placeholder="Message" rows="4"></textarea></div>
 							</div>
 							<ul class="actions special">
