Updated work info

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<li><a href="#intro">Home</a></li>
 				<li><a href="#who">Who I Am</a></li>
 				<li><a href="#what">What I Do</a></li>
-				<!-- <li><a href="#work">My Work</a></li> -->
+				<li><a href="#work">My Work</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
 		</nav>
@@ -71,38 +71,26 @@
 				I have also worked on diversifying my knowledge and skill set by taking up the course on Mobile Systems
 				and loved every bit of developing mobile apps using iOS and Android platforms.</p>
 		</div>
-		<a href="#contact" class="button style2 down anchored">Next</a>
+		<a href="#work" class="button style2 down anchored">Next</a>
 	</section>
 
 	<!-- Work -->
-	<!-- <section id="work" class="main style3 primary">
+	<section id="work" class="main style3 primary">
 				<div class="content">
 					<header>
 						<h2>My Work</h2>
 						<p></p>
-					</header> -->
+					</header>
 
 	<!-- Gallery  -->
-	<!-- <div class="gallery">
+	<div class="gallery">
 							<article class="from-left">
-								<a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" title="" alt="" /></a>
+								<a href="images/sample_funmath.png" class="image fit"><img src="images/sample_funmath.png" title="Fun Math - Visual Learning WebApp" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="" alt="" /></a>
+								<a href="images/sample_qald.png" class="image fit"><img src="images/sample_qald.png" title="Bilingual Question Answering Over Linked Data" alt="" /></a>
 							</article>
-							<article class="from-left">
-								<a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" title="" alt="" /></a>
-							</article>
-							<article class="from-right">
-								<a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" title="" alt="" /></a>
-							</article>
-							<article class="from-left">
-								<a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" title="" alt="" /></a>
-							</article>
-							<article class="from-right">
-								<a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" title="" alt="" /></a>
-							</article>
-						</div> -->
+						</div>
 
 	</div>
 	</section>
