--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
 	<!-- Gallery  -->
 	<div class="gallery">
 							<article class="from-left">
-								<a href="images/sample_funmath.png" class="image fit"><img src="images/sample_funmath.png" title="Fun Math - Visual Learning WebApp" alt="" /></a>
+								<a href="images/sample_funmath.png" class="image fit"><img src="images/thumbs/thumb_funmath.png" title="Fun Math - Visual Learning WebApp" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/sample_qald.png" class="image fit"><img src="images/sample_qald.png" title="Bilingual Question Answering Over Linked Data" alt="" /></a>
+								<a href="images/sample_qald.png" class="image fit"><img src="images/thumbs/thumb_qald.png" title="Bilingual Question Answering Over Linked Data" alt="" /></a>
 							</article>
 						</div>
 
