Added new images

--- a/index.html
+++ b/index.html
@@ -90,6 +90,12 @@
 							<article class="from-right">
 								<a href="images/sample_qald.png" class="image fit"><img src="images/thumbs/thumb_qald.png" title="Bilingual Question Answering Over Linked Data" alt="" /></a>
 							</article>
+							<article class="from-left">
+								<a href="images/sample_cloudflare_workerA.png" class="image fit"><img src="images/thumbs/thumb_cloudflare_workerB.png" title="Application to Simulate A/B Testing" alt="" /></a>
+							</article>
+							<article class="from-right">
+								<a href="images/sample_sea.png" class="image fit"><img src="images/thumbs/thumb_sea.png" title="Stack-based Programming Language Built From The Ground Up" alt="" /></a>
+							</article>
 						</div>
 
 	</div>
