--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<h2>Who I Am</h2>
 			</header>
 			<p>I'm a passionate developer but more importantly I'm passionate about technology.
-				I have about 3 years of professional application development experience.
+				I have more than 4 years of professional application development experience.
 				During which, I have programmed in many languages like Java, Python, TypeScript
 				and worked on a wide range of projects with various agile teams.
 				My stint at the Bank of New York Mellon helped me gain valuable experience in system design and full
